--- a/blog.html
+++ b/blog.html
@@ -7,11 +7,6 @@
 <title>Document</title>
 </head>
 <body>
-<h1>Página inicial</h1>
-<p>Sejam bem-vindos ao nosso website</p>
-<a href="catalogo.html">Ir para a página de catálogo</a>
-<a href="sobre.html">Conheça a empresa</a>
-<a href="blog.html">Acesse o blog</a>
-
+<h1>meu blog</h1>
 </body>
 </html>
